--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@radix-ui/themes": "^2.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
