--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.2",
+    "react-safe": "^1.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8"
